--- a/christmas-tree.html
+++ b/christmas-tree.html
@@ -1,204 +1,281 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Animated Christmas Tree</title>
+
   <style>
-    :root{
-      --bg:#081426; --snow:#eef6ff; --tree:#0b6b2b; --accent:#ffd166; --garland:#b71c1c;
-      --screen-padding:24px; --tree-width:320px;
-      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+    :root {
+      --bg: #081426;
+      --snow: #eef6ff;
+      --tree: #0b6b2b;
+      --accent: #ffd166;
+      --garland: #b71c1c;
+
+      --padding: 24px;
+      --tree-width: 320px;
+
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
     }
-    html,body{height:100%;}
-    body{
-      margin:0; background: radial-gradient(1200px 600px at 10% 10%, #0d2746 0%, var(--bg) 35%);
-      color:#fff; display:flex; align-items:center; justify-content:center; padding:var(--screen-padding);
+
+    html, body {
+      height: 100%;
+      margin: 0;
     }
-    /* layout */
-    .card{width:min(880px,100%); background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(0,0,0,0.05)); border-radius:16px; padding:28px; box-shadow: 0 10px 30px rgba(3,12,30,0.6); display:flex; gap:24px; align-items:center;}
-    .left{flex:1; display:flex; flex-direction:column; gap:12px;}
-    h1{margin:0; font-size:20px; letter-spacing:0.4px}
-    p{margin:0; opacity:0.9}
-    .controls{margin-top:10px; display:flex; gap:8px; align-items:center}
-    button{background:transparent; border:1px solid rgba(255,255,255,0.12); color:inherit; padding:8px 12px; border-radius:10px; cursor:pointer}
-    /* preview */
-    .stage{width:var(--tree-width); height:520px; position:relative; display:flex; align-items:flex-end; justify-content:center}
 
-    /* snow */
-    .snow{position:absolute; inset:0; pointer-events:none; overflow:hidden}
-    .flake{position:absolute; top:-10px; width:6px; height:6px; border-radius:50%; background:var(--snow); opacity:0.9; filter:blur(.4px); animation:fall linear infinite;}
-    @keyframes fall{to{transform:translateY(620px); opacity:0.1}}
+    body {
+      background: radial-gradient(
+        1200px 600px at 10% 10%,
+        #0d2746 0%,
+        var(--bg) 35%
+      );
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: var(--padding);
+    }
 
-    /* tree structure using 3 layered triangles */
-    .tree{position:relative; width:260px; display:flex; align-items:center; justify-content:center; transform-origin:center bottom}
-    .layer{width:0; height:0; border-left:120px solid transparent; border-right:120px solid transparent; border-bottom:120px solid var(--tree); margin-bottom:-30px; border-radius:6px 6px 10px 10px / 6px; box-shadow: inset 0 -8px 20px rgba(0,0,0,0.2)}
-    .layer:nth-child(1){border-left-width:140px; border-right-width:140px; border-bottom-width:160px}
-    .layer:nth-child(2){border-bottom:140px solid var(--tree)}
-    .layer:nth-child(3){border-bottom:110px solid var(--tree)}
+    .card {
+      width: min(880px, 100%);
+      background: linear-gradient(
+        180deg,
+        rgba(255,255,255,0.03),
+        rgba(0,0,0,0.05)
+      );
+      border-radius: 16px;
+      padding: 28px;
+      box-shadow: 0 10px 30px rgba(3,12,30,0.6);
+      display: flex;
+      gap: 24px;
+      align-items: center;
+    }
 
-    /* trunk */
-    .trunk{width:46px; height:56px; background:#6b3b21; border-radius:6px; margin-top:4px; box-shadow:0 6px 10px rgba(0,0,0,0.4)}
+    .left {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
 
-    /* star */
-    .star{position:absolute; top:-36px; width:52px; height:52px; display:grid; place-items:center;}
-    .star svg{width:48px; height:48px; filter:drop-shadow(0 6px 14px rgba(255,200,60,0.12)); animation:starGlow 2s ease-in-out infinite}
-    @keyframes starGlow{0%,100%{transform:scale(1)}50%{transform:scale(1.08)}}
+    h1 {
+      margin: 0;
+      font-size: 20px;
+    }
 
-    /* lights */
-    .light{position:absolute; width:10px; height:10px; border-radius:50%; box-shadow:0 4px 10px rgba(0,0,0,0.4);}
-    .light--1{left:36%; top:58%; background:#ff5d8f; animation:blink 1.8s infinite}
-    .light--2{left:58%; top:62%; background:#ffd166; animation:blink 2.2s infinite}
-    .light--3{left:26%; top:48%; background:#6aebc6; animation:blink 1.4s infinite}
-    .light--4{left:66%; top:48%; background:#63a4ff; animation:blink 2.6s infinite}
-    .light--5{left:46%; top:36%; background:#ffb86b; animation:blink 1.1s infinite}
-    @keyframes blink{0%,100%{transform:scale(.8); opacity:.7; filter:drop-shadow(0 6px 12px rgba(0,0,0,0.25))}50%{transform:scale(1.4); opacity:1; filter:drop-shadow(0 12px 22px rgba(0,0,0,0.35))}}
+    p {
+      margin: 0;
+      opacity: 0.9;
+    }
 
-    /* ornaments */
-    .orn{position:absolute; width:18px; height:18px; border-radius:50%; box-shadow:inset 0 -6px 8px rgba(0,0,0,0.18);}
-    .orn--r{background:linear-gradient(180deg,#e76f51,#c03b2b)}
-    .orn--g{background:linear-gradient(180deg,#2aa198,#1e7f6b)}
-    .orn--b{background:linear-gradient(180deg,#6a9cff,#2f63d9)}
-    .orn--y{background:linear-gradient(180deg,#ffd166,#f7b500)}
-    .orn{animation:floatY 4s ease-in-out infinite}
-    .orn--1{left:48%; top:54%; animation-delay:0s}
-    .orn--2{left:62%; top:56%; animation-delay:0.6s}
-    .orn--3{left:36%; top:46%; animation-delay:0.2s}
-    .orn--4{left:54%; top:40%; animation-delay:0.9s}
-    @keyframes floatY{0%{transform:translateY(0)}50%{transform:translateY(-6px)}100%{transform:translateY(0)}}
+    .controls {
+      margin-top: 10px;
+      display: flex;
+      gap: 8px;
+    }
 
-    /* garland */
-    .garland{position:absolute; width:320px; height:6px; top:160px; left:50%; transform:translateX(-50%); pointer-events:none}
-    .garland svg{width:100%; height:100%; overflow:visible}
+    button {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.12);
+      color: inherit;
+      padding: 8px 12px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
 
-    /* subtle tree sway */
-    .stage .tree{animation: sway 6s ease-in-out infinite}
-    @keyframes sway{0%{transform:rotate(-0.8deg)}50%{transform:rotate(0.8deg)}100%{transform:rotate(-0.8deg)}}
+    .stage {
+      width: var(--tree-width);
+      height: 520px;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+    }
 
-    /* responsive */
-    @media (max-width:700px){.card{flex-direction:column; align-items:center}.left{order:2}.stage{order:1}}
+    .snow {
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      overflow: hidden;
+    }
 
-    /* footer note */
-    .note{font-size:12px; opacity:0.7}
+    .flake {
+      position: absolute;
+      top: -10px;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background: var(--snow);
+      opacity: 0.9;
+      animation: fall linear infinite;
+    }
+
+    @keyframes fall {
+      to {
+        transform: translateY(620px);
+        opacity: 0.1;
+      }
+    }
+    
+    .tree {
+      position: relative;
+      width: 260px;
+      transform-origin: center bottom;
+      animation: sway 6s ease-in-out infinite;
+    }
+
+    .layer {
+      width: 0;
+      height: 0;
+      border-left: 120px solid transparent;
+      border-right: 120px solid transparent;
+      border-bottom: 120px solid var(--tree);
+      margin-bottom: -30px;
+    }
+
+    .layer:nth-child(1) {
+      border-left-width: 140px;
+      border-right-width: 140px;
+      border-bottom-width: 160px;
+    }
+
+    .layer:nth-child(2) {
+      border-bottom-width: 140px;
+    }
+
+    .layer:nth-child(3) {
+      border-bottom-width: 110px;
+    }
+
+    @keyframes sway {
+      0%, 100% { transform: rotate(-0.8deg); }
+      50% { transform: rotate(0.8deg); }
+    }
+
+    .trunk {
+      width: 46px;
+      height: 56px;
+      background: #6b3b21;
+      border-radius: 6px;
+      margin: 4px auto 0;
+    }
+
+    .star {
+      position: absolute;
+      top: -36px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .light {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      animation: blink 2s infinite;
+    }
+
+    @keyframes blink {
+      0%, 100% { transform: scale(0.8); opacity: 0.6; }
+      50% { transform: scale(1.4); opacity: 1; }
+    }
+
+    .orn {
+      position: absolute;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      animation: floatY 4s ease-in-out infinite;
+    }
+
+    @keyframes floatY {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-6px); }
+      100% { transform: translateY(0); }
+    }
+    
+    @media (max-width: 700px) {
+      .card {
+        flex-direction: column;
+      }
+    }
+
+    .note {
+      font-size: 12px;
+      opacity: 0.7;
+    }
   </style>
 </head>
+
 <body>
-  <div class="card" role="application" aria-label="Animated Christmas tree preview">
+
+  <div class="card">
     <div class="left">
-      <h1>Animated Christmas Tree — Website Version</h1>
-      <p>Create your own festive tree with CSS animations (snow, blinking lights, ornaments, star glow, subtle sway).</p>
+      <h1>Animated Christmas Tree</h1>
+      <p>A simple festive tree made with HTML, CSS and JavaScript.</p>
+
       <div class="controls">
         <button id="toggleSnow">Toggle Snow</button>
         <button id="toggleLights">Toggle Lights</button>
-        <button id="downloadBtn">Download PNG</button>
       </div>
-      <p class="note">Tip: Save this file as <code>christmas-tree.html</code> and open it in a browser. Use the buttons to try effects.</p>
+
+      <p class="note">
+        Save this file as <code>christmas-tree.html</code> and open it in a browser.
+      </p>
     </div>
 
     <div class="stage" id="stage">
       <div class="snow" id="snow"></div>
 
-      <div class="tree" id="tree">
-        <div class="star" aria-hidden="true">
-          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden>
-            <path d="M12 2l1.902 4.587L18.5 8.09l-3.25 2.934L15.804 16 12 13.8 8.196 16l.554-4.976L5.5 8.09l4.598-1.503L12 2z" fill="url(#g)"/>
-            <defs>
-              <linearGradient id="g" x1="0" x2="1">
-                <stop offset="0" stop-color="#ffe082"/>
-                <stop offset="1" stop-color="#ffd166"/>
-              </linearGradient>
-            </defs>
-          </svg>
-        </div>
+      <div class="tree">
+        <div class="star">⭐</div>
 
         <div class="layer"></div>
         <div class="layer"></div>
         <div class="layer"></div>
 
-        <!-- trunk -->
         <div class="trunk"></div>
 
-        <!-- lights -->
-        <div class="light light--1"></div>
-        <div class="light light--2"></div>
-        <div class="light light--3"></div>
-        <div class="light light--4"></div>
-        <div class="light light--5"></div>
+        <!-- Lights -->
+        <div class="light" style="left:40%; top:55%; background:#ffd166"></div>
+        <div class="light" style="left:60%; top:50%; background:#ff5d8f"></div>
 
-        <!-- ornaments -->
-        <div class="orn orn--r orn--1"></div>
-        <div class="orn orn--b orn--2"></div>
-        <div class="orn orn--g orn--3"></div>
-        <div class="orn orn--y orn--4"></div>
-
-        <!-- garland (SVG path) -->
-        <div class="garland" aria-hidden="true">
-          <svg viewBox="0 0 320 6" preserveAspectRatio="none">
-            <path d="M0 4 C40 0, 80 8, 120 4 C160 0,200 8,240 4 C280 0,320 8,360 4" stroke="#b71c1c" stroke-width="6" fill="none" stroke-linecap="round" stroke-linejoin="round" opacity="0.95"/>
-          </svg>
-        </div>
-
+        <!-- Ornaments -->
+        <div class="orn" style="left:50%; top:45%; background:#e76f51"></div>
       </div>
     </div>
   </div>
 
   <script>
-    // small utility: create falling snow elements
-    const snowEl = document.getElementById('snow');
-    let snowOn = true;
-    const makeFlake = (i)=>{
-      const f = document.createElement('div');
-      f.className='flake';
-      const size = Math.random()*6 + 2; f.style.width=size+'px'; f.style.height=size+'px';
-      f.style.left = Math.random()*100 + '%';
-      const delay = Math.random()*-20; const dur = Math.random()*6 + 6;
-      f.style.animationDuration = dur+'s'; f.style.animationDelay = delay+'s';
-      f.style.opacity = 0.6 + Math.random()*0.4;
-      snowEl.appendChild(f);
-    }
-    for(let i=0;i<28;i++) makeFlake(i);
+    const snow = document.getElementById("snow");
+    let snowEnabled = true;
 
-    // controls
-    document.getElementById('toggleSnow').addEventListener('click', ()=>{
-      snowOn = !snowOn; snowEl.style.display = snowOn ? 'block' : 'none';
-      document.getElementById('toggleSnow').textContent = snowOn ? 'Toggle Snow' : 'Snow Off';
-    });
+    function createSnowflake() {
+      const flake = document.createElement("div");
+      flake.className = "flake";
+      flake.style.left = Math.random() * 100 + "%";
+      flake.style.animationDuration = (6 + Math.random() * 6) + "s";
+      snow.appendChild(flake);
+    }
+
+    for (let i = 0; i < 25; i++) {
+      createSnowflake();
+    }
+
+    document.getElementById("toggleSnow").onclick = () => {
+      snowEnabled = !snowEnabled;
+      snow.style.display = snowEnabled ? "block" : "none";
+    };
 
     let lightsOn = true;
-    document.getElementById('toggleLights').addEventListener('click', ()=>{
+    document.getElementById("toggleLights").onclick = () => {
       lightsOn = !lightsOn;
-      document.querySelectorAll('.light').forEach(l=>{ l.style.animationPlayState = lightsOn ? 'running' : 'paused'; l.style.opacity = lightsOn? '' : '0.4'; });
-      document.getElementById('toggleLights').textContent = lightsOn ? 'Toggle Lights' : 'Lights Off';
-    });
-
-    // Download a PNG snapshot
-    document.getElementById('downloadBtn').addEventListener('click', async ()=>{
-      const stage = document.getElementById('stage');
-      // use html2canvas like approach without external lib: fallback to SVG serialization of stage
-      // create an SVG snapshot wrapper and rasterize using canvas
-      const rect = stage.getBoundingClientRect();
-      const svg = `<?xml version="1.0" encoding="utf-8"?>\n`+
-        `<svg xmlns='http://www.w3.org/2000/svg' width='${rect.width}' height='${rect.height}'>`+
-        `<foreignObject width='100%' height='100%'>`+
-        new XMLSerializer().serializeToString(stage.cloneNode(true)).replace(/xmlns=""/g,'')+
-        `</foreignObject></svg>`;
-      const img = new Image();
-      const svgBlob = new Blob([svg],{type:'image/svg+xml;charset=utf-8'});
-      const url = URL.createObjectURL(svgBlob);
-      img.onload = ()=>{
-        const c = document.createElement('canvas'); c.width = rect.width; c.height = rect.height;
-        c.getContext('2d').drawImage(img,0,0);
-        URL.revokeObjectURL(url);
-        const a = document.createElement('a'); a.download = 'christmas-tree.png'; a.href = c.toDataURL('image/png'); a.click();
-      };
-      img.src = url;
-    });
-
-    // accessibility: reduce motion setting
-    const mq = window.matchMedia('(prefers-reduced-motion: reduce)');
-    if(mq.matches){
-      document.querySelectorAll('*').forEach(el=>el.style.animationDuration = '0s');
-    }
+      document.querySelectorAll(".light").forEach(light => {
+        light.style.animationPlayState = lightsOn ? "running" : "paused";
+      });
+    };
   </script>
+
 </body>
 </html>
